--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,7 +19,12 @@
         <%= form.number_field :price %>
     </div>
 
+    <div>
+        <%= form.label :category_id %>
+        <%= form.collection_select :category_id, Category.all.order(name: :asc), :id, :name %>
+    </div>
     
+
     <div>
         <%= form.label :photo %>
         <%= form.file_field :photo %>
