--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<%= link_to product_path(product), class: 'product' do %>
+<%= link_to product_path(product), class: 'product', 'data-turbo-frame': '_top' do %>
     <h2><%= product.title %></h2>
     <%= image_tag product.photo, width: 200 if product.photo.attached? %>
     <br/><span><%= product.price %>$</span>
