--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
   <%= Current.user.inspect %>
 
   <%= link_to t('.add'), new_product_path if Current.user %>
-  <%= link_to t('.categories'), categories_path if Current.user %>
+  <%= link_to t('.categories'), categories_path if Current.user&.admin? %>
   <%= link_to t('.login'), new_session_path unless Current.user %>
   <%= link_to t('.register'), new_user_path unless Current.user %>
   
