--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,8 @@
 <p class='description'><%= @product.description %></p>
 <span class='price'><%= @product.price %></span>
 
-<%= link_to 'Editar producto', edit_product_path(@product) if @product.user == Current.user %>
+<%= link_to 'Editar producto', edit_product_path(@product) if @product.owner? %>
 <%= link_to 'Eliminar producto', product_path(@product), data:{
         turbo_method: :delete,
         turbo_confirm: t('common.confirm')
-    } if @product.user == Current.user%> 
+    } if @product.owner?%> 
