--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,14 +14,6 @@
 
 <%= link_to t('.view_more_products', username: @product.user.username), user_path(@product.user.username) %>
 
-<% if @product.favorite %>
-  <%= link_to '❤️', favorite_path(@product.id), data: {
-    turbo_method: :delete
-  } %>
-<% else %>
-  <%= link_to '💟', favorites_path(product_id: @product.id), data: {
-    turbo_method: :post
-  } %>
-<% end %>
+<%= render partial: 'favorite', locals: { product: @product } %>
 
 
