--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
   <%= link_to products_path do %>
-    <h1><%= t('app_name') %></h1>
+    <h1 class="text-red-800 hover:text-blue-400 animate-bounce"><%= t('app_name') %></h1>
   <% end %>
 
   <%= Current.user.inspect %>
